add estilização de tailwindcss

--- a/movie/src/index.html
+++ b/movie/src/index.html
@@ -19,7 +19,7 @@
   <title>Movie Challenge</title>
 </head>
 
-<body class="bg-bd-background mat-typography">
+<body class="bg-color-background mat-typography">
   <app-root></app-root>
 </body>
 
